Changed the title page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="stylesheet" href="style.css">
-    <title>Another grid test</title>
+    <title>João´s GuestHouse</title>
 </head>
 
 <body>
